cabal-version:      3.0
name:               bytestring-th-segfault
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bytestring-th-segfault
    import:           warnings
    main-is:          BenchAll.hs
    other-modules: BenchTop
    -- other-extensions:
    ghc-options: -fprefer-byte-code -fbyte-code-and-object-code
    build-depends:    base >=4.17.0.0, bytestring, tasty-bench
    hs-source-dirs:   exe
    default-language: Haskell2010
